// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating a ReasonML:react-hooks snippet should generate the correct mutation snippet 1`] = `
Object {
  "options": Object {},
  "snippet": "

require \\"graphql/client\\"
require \\"graphql/client/http\\"

ServerUrl = \\"https://api.myservice.com/\\"
HTTP = GraphQL::Client::HTTP.new(ServerUrl)
Schema = GraphQL::Client.load_schema(HTTP)
Client = GraphQL::Client.new(schema: Schema, execute: HTTP)

TestMutationMutation = Client.parse <<-'GRAPHQL'

mutation testMutation {
  addData(id: \\"id\\") {
    id
  }
}
GRAPHQL


result = Client.query(TestMutationMutation)
puts(result)",
}
`;

exports[`Generating a ReasonML:react-hooks snippet should generate the correct query snippet 1`] = `
Object {
  "options": Object {},
  "snippet": "

require \\"graphql/client\\"
require \\"graphql/client/http\\"

ServerUrl = \\"https://api.myservice.com/\\"
HTTP = GraphQL::Client::HTTP.new(ServerUrl)
Schema = GraphQL::Client.load_schema(HTTP)
Client = GraphQL::Client.new(schema: Schema, execute: HTTP)

TestQueryQuery = Client.parse <<-'GRAPHQL'

query testQuery {
  someData {
    id
  }
}

GRAPHQL


result = Client.query(TestQueryQuery)
puts(result)",
}
`;
